# bazel-pybind11

./: .bazelrc  WORKSPACE
pybind_examples/: BUILD.bazel  module_bind.cpp  utils.cpp  utils.h  utils_test.py
