load("@rules_cc//cc:defs.bzl", "cc_library")
# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "myutils",
    srcs = ["module_bind.cpp"],
    deps = [
        "//pybind_examples:utils",
    ],
)

py_test(
    name = "utils_test",
    size = "enormous",
    srcs = ["utils_test.py"],
    python_version = "PY3",
    data = select({
      "@platforms//os:windows": [":myfoo.pyd"],
      "//conditions:default": [":myutils.so"],
    }),
    tags = ["unit"],
)

cc_library(
    name = "utils",
    srcs = ["utils.cpp"],
    hdrs = ["utils.h"],
    deps = [
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",        
    ],
    visibility = ["//visibility:public"],
)